# terraform-sage

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml
ci/: before_deploy.sh
examples/approach_two/: main.tf  main.tpl
examples/context_switch/: main.tpl  variables.tf
examples/context_switch/configs/: context.toml
examples/properties/: main.tpl
examples/templates/: main.tpl
src/: cli.rs  client.rs  error.rs  main.rs  template.rs  terminal.rs  terraform.rs  utils.rs
