[package]
name = "terraform-sage"
version = "0.1.0"
authors = ["Valeryi Savich <relrin78@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Cross-platform tool for easier Terraform deployments"
homepage = "https://github.com/Relrin/terraform-sage"
repository = "https://github.com/Relrin/terraform-sage"
keywords = ["terraform", "cli", "deploy", "devops", "infrastructure"]

[dependencies]
ansi_term = "0.12.1"
clap = "2.33"
handlebars = "3.0.1"
serde_json = "1.0.48"
structopt = "0.3.11"
structopt-derive = "0.4.4"
quick-error = "1.2.3"
